<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <ImageView android:layout_height="wrap_content"
	            android:src="@drawable/sign_in_title_bg"
	            android:layout_width="wrap_content"
	            android:id="@+id/imageView2"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true" />
	    <ImageView android:layout_height="wrap_content"
	            android:src="@drawable/logo_signin"
	            android:layout_width="wrap_content"
	            android:id="@+id/imageView1"
	            android:layout_below="@+id/imageView2"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="11.3dp"
	            android:layout_marginTop="14dp" />
	    <TextView android:id="@+id/textSummery"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/signin_label_summery"
	            android:textSize="14sp"
	            android:textColor="#FFFFFFFF"
	            android:layout_below="@+id/imageView1"
	            android:layout_alignParentLeft="true"
	            android:layout_marginLeft="11.3dp"
	            android:layout_marginRight="11.3dp"
	            android:layout_marginTop="8.66dp" />
	    <TextView android:id="@+id/textTitle"
	            android:layout_height="wrap_content"
	            android:textStyle="bold"
	            android:layout_width="wrap_content"
	            android:text="@string/signin_label_title"
	            android:layout_alignTop="@+id/imageView1"
	            android:layout_toRightOf="@+id/imageView1"
	            android:textSize="26.66dp"
	            android:textColor="#FFFFFFFF"
	            android:layout_marginLeft="6dp"
	            android:layout_marginTop="18dp" />
	    <ImageView android:layout_height="wrap_content"
	            android:src="@drawable/sign_in_bg"
	            android:layout_width="wrap_content"
				android:id="@+id/imageView3"
				android:layout_below="@+id/textSummery"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="2dp"
				android:layout_marginTop="25.33dp" />
	    <TextView android:id="@+id/textView1"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/signin_label_account_info"
				android:textColor="#FF505050"
				android:layout_alignTop="@+id/imageView3"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="12dp"
				android:layout_marginTop="16dp" />
	    <Button android:layout_height="30dip"
				android:text="@string/signin_button_signin"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:id="@+id/button_sign_in"
				android:background="@drawable/btn_signin"
				android:textSize="14sp"
				android:layout_below="@+id/signin_edit_password"
				android:layout_alignParentRight="true"
				android:layout_marginRight="10dp"
				android:layout_marginTop="8dp" />
	    <Button android:text="@string/signin_label_signup"
				android:padding="0dp"
				android:textColor="#FFFFFFFF"
				android:textSize="12sp"
				android:singleLine="true"
				android:layout_width="wrap_content"
				android:id="@+id/button1"
				android:background="@drawable/ic_signupid_bg"
				android:layout_alignBottom="@+id/imageView3"
				android:layout_centerHorizontal="true"
				android:layout_marginBottom="12dp"
				android:layout_height="wrap_content" />
	    <TextView android:layout_height="wrap_content"
	            android:linksClickable="true"
				android:text="@string/signin_label_forgot_password"
				android:textColor="#FF505050"
				android:textSize="12sp"
				android:layout_width="wrap_content"
				android:id="@+id/text_link_forgot_password"
				android:layout_alignBaseline="@+id/button_sign_in"
				android:layout_alignBottom="@+id/button_sign_in"
				android:layout_alignLeft="@+id/imageView3"
				android:layout_marginLeft="14dip" />
	    <LinearLayout android:layout_height="2px"
	            android:background="#FFF9F9F9"
				android:layout_width="wrap_content"
				android:id="@+id/linearLayout1"
				android:orientation="vertical"
				android:layout_above="@+id/button1"
				android:layout_alignLeft="@+id/signin_edit_username"
				android:layout_alignRight="@+id/signin_edit_username"
				android:layout_marginBottom="7.33dp" />
	    <LinearLayout
	            android:layout_height="1px"
				android:background="#FF949494"
				android:layout_width="wrap_content"
				android:id="@+id/linearLayout2"
				android:orientation="vertical"
				android:layout_alignTop="@+id/linearLayout1"
				android:layout_alignLeft="@+id/signin_edit_username"
				android:layout_alignRight="@+id/signin_edit_username" />
        <EditText android:background="@drawable/textbox" android:id="@+id/signin_edit_username" android:inputType="textEmailAddress" android:hint="@string/signin_label_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/imageView3" android:layout_alignRight="@+id/imageView3" android:layout_marginLeft="12px" android:layout_marginRight="12px" android:layout_marginTop="19px">
            <requestFocus></requestFocus>

        </EditText>
        <EditText android:background="@drawable/textbox" android:id="@+id/signin_edit_password" android:inputType="textPassword" android:hint="@string/label_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/signin_edit_username" android:layout_alignLeft="@+id/imageView3" android:layout_alignRight="@+id/imageView3" android:layout_marginLeft="12px" android:layout_marginRight="12px" android:layout_marginTop="11px"></EditText>
	    <ImageView android:layout_height="wrap_content"
				android:src="@drawable/ic_textbox_signin_account"
				android:id="@+id/imageView4"
				android:layout_width="wrap_content"
				android:layout_alignTop="@+id/signin_edit_username"
				android:layout_alignLeft="@+id/signin_edit_username"
				android:layout_marginLeft="6dp"
				android:layout_marginTop="8.66dp" />
	    <ImageView android:layout_height="wrap_content"
				android:src="@drawable/ic_textbox_signin_password"
				android:id="@+id/imageView5"
				android:layout_width="wrap_content"
				android:layout_alignTop="@+id/signin_edit_password"
				android:layout_alignLeft="@+id/signin_edit_password"
				android:layout_marginLeft="6dp"
				android:layout_marginTop="8.66dp" />
</RelativeLayout>
